fixed lincoln calling text on mobile view

--- a/app/assets/stylesheets/nav_bar.scss
+++ b/app/assets/stylesheets/nav_bar.scss
@@ -4,8 +4,6 @@
   background-color: #ff8110;
   color: white;
   text-align: center;
-
-  
 }
 .orange_box__icon{
   display: none;
@@ -13,10 +11,11 @@
   font-size: 80px;
   border-right: 2px solid white;
   margin: -21px 0px 0px 0px;
+  text-align: center;
   padding: 16px 29px 6px 25px;
 }
 .orange_box__text{
-  font-size: 40px;
+  font-size: 30px;
   text-shadow: 3px 6px #8f8f8f;
 }
 
@@ -91,4 +90,5 @@
     font-size: 55px;
   }
 }
+
 
